--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  add_submodule:
+  update_submodules:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,10 +14,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Git Submodules
-      run: git submodule update --init
+      run: git submodule update --remote
 
   process_config:
-    needs: add_submodule
+    needs: update_submodules
     runs-on: ubuntu-latest
 
     steps:
@@ -34,6 +34,6 @@ jobs:
     - name: Execute External Script
       if: steps.config_changes.outputs.config_changes != ''
       run: |
-        chmod +x process-config.sh
+        chmod +x submodule.sh
         ./process-config.sh ${{ secrets.GITHUB_TOKEN }}
       working-directory: ${{ github.workspace }}
