--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Check for Changes in Config File
       id: config_changes
       run: |
-        CHANGES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "config.yml")
+        CHANGES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "projects.list")
         echo "::set-output name=config_changes::${CHANGES}"
       working-directory: ${{ github.workspace }}
 
