--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -10,14 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Dump GitHub context
-      env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-      run: echo "$GITHUB_CONTEXT"
+
       
     - name: Checkout repository
       uses: actions/checkout@v4
-
+      
     - name: Set up Git Submodules
       run: git submodule update --remote
 
@@ -29,10 +26,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"      
+
     - name: Check for Changes in Config File
       id: config_changes
       run: |
-        CHANGES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "projects.list")
+        CHANGES=$(git diff --name-only ${{ github.sha }} | grep "projects.list")
         echo "::set-output name=config_changes::${CHANGES}"
       working-directory: ${{ github.workspace }}
 
