--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with: 
+        fetch-depth: 0
 
     - name: Dump GitHub context
       env:
@@ -33,7 +35,6 @@ jobs:
 
     - name: Check for Changes in Config File
       id: config_changes
-
       run: |
         # Get the list of files changed in the current commit
         CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
