test: submodule creation not seen on github

--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -55,6 +55,6 @@ jobs:
         # chmod +x submodule.sh
         #action_sh="project.sh"
         #git update-index --chmod=+x project.sh
-        chmod +x project.sh
-        ./project.sh ${{ secrets.GITHUB_TOKEN }}
-      working-directory: ${{ github.workspace }}/.github/workflows/project/
+        chmod +x .github/workflows/project/project.sh
+        .github/workflows/project/project.sh ${{ secrets.GITHUB_TOKEN }}
+      working-directory: ${{ github.workspace }}
