--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -45,7 +45,7 @@ jobs:
           echo "::set-output name=config_changes::true"
         fi
 
-    - name: Execute External Script
+    - name: Add project submodule
       #if: steps.ckeck_config.outputs.config_changes != ''
       run: |
         echo "projects.list has been changed."
@@ -58,3 +58,15 @@ jobs:
         chmod +x .github/workflows/project/project.sh
         .github/workflows/project/project.sh ${{ secrets.GITHUB_TOKEN }}
       working-directory: ${{ github.workspace }}
+
+    - name: Commit Changes
+      run: |
+        git config user.name "${{ github.repository_owner }}"       
+        git add .
+        git commit -m "Action: Submodules management"
+      working-directory: ${{ github.workspace }}
+
+    - name: Push Changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
