--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -4,19 +4,19 @@ on:
   push:
     branches:
       - main
+    paths: 
+      - */projects.list
 
 jobs:
   update_submodules:
     runs-on: ubuntu-latest
 
-    steps:
-
-      
+    steps:      
     - name: Checkout repository
       uses: actions/checkout@v4
       
     - name: Set up Git Submodules
-      run: git submodule update --remote
+      run: git submodule update --remote --init
 
   process_config:
     needs: update_submodules
@@ -47,19 +47,16 @@ jobs:
 
     - name: Add project submodule
       if: steps.ckeck_config.outputs.config_changes != ''
+      env:
+        ORG_TOKEN: ${{ secrets.ORG4G_SECRET }}
       run: |
         echo "projects.list has been changed."
-        echo $SHELL
-        echo $(pwd)
-        ls
-        # chmod +x submodule.sh
-        #action_sh="project.sh"
-        #git update-index --chmod=+x project.sh
-        chmod +x .github/workflows/project/project.sh
-        .github/workflows/project/project.sh ${{ secrets.ORG4G_SECRET }}
-      working-directory: ${{ github.workspace }}
+        # git update-index --chmod=+x ./project/project.sh
+        chmod +x ./project/project.sh
+        ./project/project.sh $ORG_TOKEN
 
     - name: Commit Changes
+      if: steps.ckeck_config.outputs.config_changes != ''
       run: |
         git config user.name "${{ github.repository_owner }}"       
         git add .
@@ -67,6 +64,7 @@ jobs:
       working-directory: ${{ github.workspace }}
 
     - name: Push Changes
+      if: steps.ckeck_config.outputs.config_changes != ''  
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.ORG4G_SECRET }}
