--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -2,10 +2,8 @@ name: Add Submodule and Request Access
 
 on:
   push:
-    branches:
-      - main
     paths: 
-      - */projects.list
+      - projects.list
 
 jobs:
   update_submodules:
