--- a/.github/workflows/volunteer.yml
+++ b/.github/workflows/volunteer.yml
@@ -19,4 +19,4 @@ jobs:
         ORG_TOKEN: ${{ secrets.ORG4G_SECRET }}
       run: |
         chmod +x ${{ vars.WORKFLOWS }}/volunteer/add_volunteer.sh
-        ./volunteer/add_volunteer.sh $GITHUB_TOKEN ${{ github.actor }}
+        ${{ vars.WORKFLOWS }}/volunteer/add_volunteer.sh $GITHUB_TOKEN ${{ github.actor }}
