--- a/.github/workflows/volunteer.yml
+++ b/.github/workflows/volunteer.yml
@@ -17,6 +17,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         ORG_TOKEN: ${{ secrets.ORG4G_SECRET }}
+        WORKFLOWS: ${{ vars.WORKFLOWS }}
       run: |
-        chmod +x ${{ vars.WORKFLOWS }}/volunteer/add_volunteer.sh
-        ${{ vars.WORKFLOWS }}/volunteer/add_volunteer.sh $GITHUB_TOKEN ${{ github.actor }}
+        chmod +x $WORKFLOWS/volunteer/add_volunteer.sh
+        $WORKFLOWS/volunteer/add_volunteer.sh $GITHUB_TOKEN ${{ github.actor }}
